# fl-service

./: .gitignore  Makefile  README.md  another-key.pem  aws-key.pem  doc.html  doc.py  fl-service=sql-app.sqbpro  flower_inventory.yaml  generate_api_doc.py  generate_doc.py  pyproject.toml  successCriteria.md  timeout.error
.github/workflows/: main.yml  pylint.yml  python-app.yml
app/: definitions.py  main.py  test_uploadfiles.py
app/ansible-resources/: playbook.yml  test.yml
app/ansible/inventory/: dynamic_inventory.py  inventory.yaml
app/ansible/inventory/test_model/: test_model.yaml
app/ansible/playbook/: apt_playbook.py  docker.yaml  docker_deploy_container.yaml  docker_playbook.py  docker_ubuntu_focal.yaml  ping.yaml  playbook.yaml
app/internal/: exceptions.py  schema.py  schemas.py
app/internal/schemas/: schema.py
app/internal/sql/: crud.py  database.py  models.py
app/internal/utils/: ansible.py  enum.py  enums.py  file.py  ssh.py  validator.py
app/routers/: database.py  ssh.py
app/routers/docker/: check.py  docker.py  template.html  upload.py
app/utils/: ssh.py
core/schemas/: schema.py
core/utils/: exceptions.py
doc/: doc.py  index.html
frontend/remote-machines-app/: package-lock.json  package.json
frontend/remote-machines-app/src/: App.css  App.js  api.js
service/: __init__.py  models.py  repository.py  service.py
src/: main.py
src/ansible-resources/: test.yml
tests/: dockerfile  dummy.yaml  entrypoint.sh  test_inventory.yaml  test_yaml.py
tests/test_ansible/: event_data.json  inventory.yaml  main.py  playbook.yaml
(+674 files in other folders)
