[tool.poetry]
name = "fl-service"
version = "0.1.0"
description = "Flower powered federated learning service."
authors = ["Nevzat Seferoglu <nevzatseferoglu@gmail.com>"]
readme = "README.md"
packages = [{include = "fl_service"}]

[tool.poetry.dependencies]
python = "3.10.7"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
fastapi = "^0.94.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
