[tool.poetry]
name = "fl-service"
version = "0.1.0"
description = "Flower powered federated learning service."
authors = ["Nevzat Seferoglu <nevzatseferoglu@gmail.com>"]
readme = "README.md"
packages = [{include = "fl_service"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
fastapi = "^0.94.1"
ansible-runner = "^2.3.2"
ansible = "^7.3.0"
pytest = "^7.2.2"
coverage = "^7.2.2"
python-multipart = "^0.0.6"
black = "^23.3.0"
autoflake = "^2.0.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"